MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeRequest__c/PaymentPlanChangeRequest__c.object-meta.xml
<CustomObject>
    <label>PaymentPlanChangeRequest</label>
    <nameField>
        <displayFormat>PPCR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PaymentPlanChangeRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>