MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeRequest__c/fields/Existing_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Existing_Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Payment Plan</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>PaymentPlanChangeRequests</relationshipLabel>
    <relationshipName>PaymentPlanChangeRequests</relationshipName>
    <type>Lookup</type>
</CustomField>