MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeRequest__c/fields/Revised_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Revised_Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revised Payment Plan</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>PaymentPlanChangeRequests (Revised Payment Plan)</relationshipLabel>
    <relationshipName>PaymentPlanChangeRequests1</relationshipName>
    <type>Lookup</type>
</CustomField>